--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathPattern=tests/.*\\.test\\.ts$",
+    "test:integration": "jest --testPathPattern=tests/api\\.test\\.ts$",
+    "test:performance": "jest --testPathPattern=tests/performance\\.test\\.ts$",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -44,9 +49,25 @@
     "ts-node-dev": "^2.0.0",
     "jest": "^29.7.0",
     "@types/jest": "^29.5.8",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.16",
+    "ts-jest": "^29.1.1",
     "eslint": "^8.55.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": ["**/tests/**/*.test.ts"],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/**/*.d.ts",
+      "!src/tests/**/*"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["text", "lcov", "html"],
+    "setupFilesAfterEnv": ["<rootDir>/src/tests/setup.ts"]
   }
 }
 
