fix: improve security-scan job configuration
- Add explicit permissions for security-events write access
- Pin Trivy action to stable version 0.28.0 (instead of @master)
- CodeQL action already updated to v3
- Ensure SARIF upload has proper permissions
- Improve security and reliability of vulnerability scanning

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,13 +199,16 @@ jobs:
   # Security Scanning
   security-scan:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: "fs"
           scan-ref: "."
