--- a/backend/package.json
+++ b/backend/package.json
@@ -38,8 +38,7 @@
     "multer": "^2.0.2",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
-    "uuid": "^11.0.3",
-    "validator": "^13.15.15"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
