--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,8 @@
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "validator": "^13.15.20"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
