--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -64,6 +64,8 @@
     "nth-check": "^2.1.1",
     "postcss": "^8.4.49",
     "webpack": "^5.94.0",
-    "webpack-dev-server": "^4.15.2"
+    "webpack-dev-server": "^4.15.2",
+    "jsonpath": "^1.1.1",
+    "lodash": "^4.17.21"
   }
 }
